add-html-basic-structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--script-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!--link-->
+    <link rel="stylesheet" href="css/style.css">
+    <!--titolo-->
+    <title> Vue To Do List </title>
 </head>
+<!--inizio body-->
 <body>
+    <!--script-->
     <script src="/js/script.js"></script>
 </body>
+<!--fine body-->
 </html>
