--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <!--link-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900
+                display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--titolo-->
     <title> Vue To Do List </title>
 </head>
@@ -26,28 +33,50 @@
             <main>
                 <div class="add-to-do">
                     <div class="input">
-                        <input type="text" placeholder="Add Todo">
-                        <i class="fas fa-plus-circle"></i>
+                        <input v-model="newTodo" type="text" placeholder="Add Todo" @keyup.enter="addTodo">
+                        <i @click="addTodo" class="fas fa-plus-circle"></i>
                     </div>
                 </div>
-                <div class="todo-list">
-                    <ul>
-                        <li v-for="todo in todos">
-                            <div class="todo-text">
-                                <i class="far" :class="(todo.done == false) ? 'fa-square' : 'fa-check-square'"
-                                    @click="todo.done = !todo.done"></i>
-                                <h3 :class="(todo.done == true) ? 'line-through' : ''" @click="todo.done = !todo.done"></h3>
-                            </div>
-                            <i @click="removeTodo(index)" class="far fa-times-circle"></i>
-                        </li>
-                    </ul>
-                </div>
+                        <div class="todo-list">
+                            <ul>
+                                <li v-for="(todo, index) in todos">
+                                    <div class="todo-text">
+                                        <i class="far" :class="(todo.done == false) ? 'fa-square' : 'fa-check-square'"
+                                            @click="todo.done = !todo.done"></i>
+                                        <h3 :class="(todo.done == true) ? 'line-through' : ''" @click="todo.done = !todo.done">{{todo.text}}</h3>
+                                    </div>
+                                    <i @click="removeTodo(index)" class="far fa-times-circle"></i>
+                                </li>
+                            </ul>
+                        </div>
             </main>
             <!--fine main-->
         </div>
     </div>
     <!--script-->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 <!--fine body-->
 </html>
+
+
+                    <input v-model="newTodo" type="text" placeholder="Add Todo" @keyup.enter="addTodo">
+                    <i @click="addTodo" class="fas fa-plus-circle"></i>
+                </div>
+            </div>
+            <div class="todo-list">
+                <ul>
+                    <li v-for="(todo, index) in todos">
+                        <div class="todo-text">
+                            <i class="far" :class="(todo.done == false) ? 'fa-square' : 'fa-check-square'"
+                                @click="todo.done = !todo.done"></i>
+                            <h3 :class="(todo.done == true) ? 'line-through' : ''" @click="todo.done = !todo.done">
+                                {{todo.text}}</h3>
+                        </div>
+                        <i @click="removeTodo(index)" class="far fa-times-circle"></i>
+                    </li>
+                </ul>
+            </div>
+        </main>
+    </div>
+</div>
