--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <!--header-->
             <header class="header">
-                <h1 class="title"> My ToDo List </h1>
+                <h1 class="title"> Promemoria ToDo</h1>
             </header>
             <!--header-->
 
